<resources>
    <string name="app_name">MySweetHome</string>
    <string name="desc_button_front_desk">Front desk</string>
    <string name="log_out">Log out</string>
    <string name="task_allocation">Task allocation</string>
    <string name="inspection">Inspection</string>
    <string name="admin_menu">Admin menu</string>
    <string name="desc_button_housekeeping">button housekeeping</string>
    <string name="housekeeping">Housekeeping</string>
    <string name="desc_button_task_allocation">task allocation</string>
    <string name="desc_button_inspection">button inspection</string>
    <string name="staff_menu">Staff menu</string>
    <string name="btn_lost_found">lost and found</string>
    <string name="btn_inspection">Inspection</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="selected_item">Selected item:</string>
    <string name="lost_and_found">Lost and Found</string>

    <string name="ddl_staff">Staff</string>
    <string name="ddl_floor">Floor</string>
    <string name="remarks">Remarks:</string>
    <string name="btn_submit">Submit</string>
    <string name="lf_date">Date</string>
    <string name="lf_item">Item</string>
    <string name="lf_status">Status</string>
    <string name="lf_add">Add</string>
    <string name="lf_location">Location</string>
    <string name="lf_edit">Edit</string>

    <string name="title_activity_cust_menu">CustMenu</string>

    <!-->drop down list for room type<!-->
    <string name="room_prompt">Choose a room type</string>

    <string-array name="room_arrays">
        <item>Double bed room</item>
        <item>Single bed room</item>
        <item>Deluxe room</item>
        <item>Queen room</item>
    </string-array>


    <string name="room_no">Room No.:</string>
    <string name="status">Status:</string>
    <string name="floor">Floor:</string>
    <string name="item">Item:</string>
    <string name="date">Date:</string>

    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>
    <string name="room_status">Room Status</string>
    <string name="homepage">Homepage</string>
    <string name="title_activity_inspect_floor_list">InspectFloorList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome,</string>

    <string name="reservation_details"><u>Reservation Details</u></string>


</resources>