<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id = "@+id/relativeLayout1"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content">

        <TextView
            android:id = "@+id/tvDate"
            android:layout_width="30dp"
            android:layout_height = "match_parent"
            android:layout_weight = "1"
            android:background = "@drawable/table_border"
            android:ellipsize = "end"
            android:padding = "5dp"
            android:text = "@string/lf_date"
            android:singleLine = "true"
            android:clickable="false"/>

        <TextView
            android:id = "@+id/tvLocation"
            android:layout_width = "0dp"
            android:layout_height = "match_parent"
            android:layout_weight = "2"
            android:background = "@drawable/table_border"
            android:ellipsize = "end"
            android:padding = "5dp"
            android:text = "@string/lf_location"
            android:singleLine = "true"
            android:clickable="false"/>

        <TextView
            android:id = "@+id/tvItem"
            android:layout_width = "0dp"
            android:layout_height = "match_parent"
            android:layout_weight = "1.5"
            android:background = "@drawable/table_border"
            android:ellipsize = "end"
            android:padding = "5dp"
            android:text = "@string/lf_item"
            android:singleLine = "true"
            android:clickable="false"/>

        <TextView
            android:id = "@+id/tvStatus"
            android:layout_width = "0dp"
            android:layout_height = "match_parent"
            android:layout_weight = "1"
            android:background = "@drawable/table_border"
            android:ellipsize = "end"
            android:padding = "5dp"
            android:text = "@string/lf_status"
            android:singleLine = "true"
            android:clickable="false"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>