<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HousekeepingMenu">

    <ImageView
        android:id="@+id/imgViewTaskAllocation"
        android:layout_width="157dp"
        android:layout_height="141dp"
        app:layout_constraintBottom_toTopOf="@+id/imgViewInspection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847"
        app:srcCompat="@drawable/btn_task"
        android:contentDescription="@string/desc_button_task_allocation" />

    <ImageView
        android:id="@+id/imgViewInspection"
        android:layout_width="158dp"
        android:layout_height="144dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/btn_inspect"
        android:contentDescription="@string/desc_button_inspection" />

    <android.widget.Button
        android:id="@+id/btnLogout"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/log_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textStyle="bold"
        app:backgroundTint="#F2C94C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#F2C94C" />


</androidx.constraintlayout.widget.ConstraintLayout>