<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InspectFloor">


    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#dff2fa"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:labelFor="@id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRemarks" />

    <Spinner
        android:id="@+id/spinnerItem"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="#dff2fa"
        app:layout_constraintBottom_toTopOf="@+id/tvStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFloor"
        android:layout_width="41dp"
        android:layout_height="22dp"
        android:layout_marginBottom="8dp"
        android:text="@string/floor"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerFoor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="256dp"
        android:background="#dff2fa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerFoor"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="44dp"
        android:background="#dff2fa"
        app:layout_constraintBottom_toTopOf="@+id/spinnerItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRemarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/remarks"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerStatus" />

    <android.widget.Button
        android:id="@+id/btnSubmit"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#F2C94C"
        android:text="@string/btn_submit"
        android:textColor="#000000"
        android:background="@drawable/rounded_corners"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="0.404" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="4dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerStatus"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvItemInspect"
        android:layout_width="41dp"
        android:layout_height="22dp"
        android:text="@string/item"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFoor"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>