<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2C94C"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/admin_menu"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="16dp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imgViewFrontDesk"
        android:layout_width="157dp"
        android:layout_height="141dp"
        android:layout_marginTop="364dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/desc_button_front_desk"
        app:layout_constraintBottom_toTopOf="@+id/imgViewHousekeeping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/btn_front_desk" />

    <ImageView
        android:id="@+id/imgViewHousekeeping"
        android:layout_width="157dp"
        android:layout_height="141dp"
        android:contentDescription="@string/desc_button_front_desk"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866"
        app:srcCompat="@drawable/btn_housekeeping" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/log_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        app:backgroundTint="#F2C94C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#F2C94C" />
</androidx.constraintlayout.widget.ConstraintLayout>