<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2C94C"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:text="@string/lost_and_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"/>
    </androidx.appcompat.widget.Toolbar>

    <TableLayout
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp"
                android:text="@string/lf_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp"
                android:text="@string/lf_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp"
                android:text="@string/lf_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp"
                android:text="@string/lf_status" />
        </TableRow>

        <!--Table content (Row 2)-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />
        </TableRow>

        <!--Table content (Row 3)-->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />
        </TableRow>

        <!--Table content (Row 4)-->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />
        </TableRow>

        <!--Table content (Row 5)-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />
        </TableRow>

        <!--Table content (Row 6)-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:padding="10dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="109dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="#F2C94C"
            android:text="@string/lf_add"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="150dp"
            android:text="@string/lf_edit"
            android:backgroundTint="#F2C94C"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"/>
    </LinearLayout>


</LinearLayout>