<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleX="2"
        android:scaleY="2"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="71dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="306dp"
            android:layout_height="309dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="343dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/imageedit_18_3429512413" />

        <com.google.android.material.chip.Chip
            android:id="@+id/Login"
            android:layout_width="223dp"
            android:layout_height="64dp"
            android:layout_marginStart="83dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="83dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textDirection="firstStrongRtl"
            android:textScaleX="3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#F8EDD631"
            app:chipSurfaceColor="#F8EDD631"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:textEndPadding="1dp"
            app:textStartPadding="1dp">

        </com.google.android.material.chip.Chip>


        <com.google.android.material.chip.Chip
            android:id="@+id/Signup"
            android:layout_width="223dp"
            android:layout_height="64dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="83dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textDirection="firstStrongRtl"
            android:textIsSelectable="false"
            android:textScaleX="3"
            android:textSize="36sp"
            android:textStyle="bold"
            app:chipSurfaceColor="#F8EDD631"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login"
            app:textEndPadding="1dp"
            app:textStartPadding="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>